# FastAPITemplate

./: .env-prod  .example.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  non-compose.Dockerfile  pyproject.toml
auth/: __init__.py  base.py  database.py  manager.py  schemas.py
config/: __init__.py
deployment/: celery-entrypoint.sh  docker-entrypoint.sh
migrations/: env.py
migrations/versions/: 17-06-2024_3adb258749ab_add_operation.py  2024_06_19_1159-3ebf09b06c3a_initialize_db.py  2024_06_22_1344-737e68cdfc9c_add_messages_table.py  4a614fc8ae9b_initialize_database.py  6a76e25629ea_rename_tables_and_add_extra_table_fields.py
scripts/: migrate_db.sh  upgrade_db.sh
src/: __init__.py  base_schemas.py  config.py  database.py  main.py  utils.py  ws_connector.py
src/app/: main.py
src/app/models/: models.py
src/auth/: base_config.py  manager.py  models.py  utils.py
src/operations/: models.py  router.py  schemas.py
src/pages/: router.py
src/tasks/: router.py  tasks.py
src/templates/: chat.html  main.html  search.html
src/ws_chat/: models.py  router.py
tests/: conftest.py  test_auth.py  test_operations.py
