[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = ["Stanislav Lukyanov <some email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
black = "^24.4.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
